# LinAlBase

./: CMakeLists.txt  ReadMe.md
cmake/: Config.cmake.in  HelperFunctions.cmake
cmake/blazeCMakeListsFile/: CMakeLists.txt  Config.cmake.in
examples/: CMakeLists.txt
examples/BlazeExample/: CMakeLists.txt  blazeExample.cpp
examples/OpenBlasExample/: CMakeLists.txt  example.cpp
